; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun6i_mipi_dsi.c_sun6i_dsi_inst_setup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/sun4i/extr_sun6i_mipi_dsi.c_sun6i_dsi_inst_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sun6i_dsi = type { i32 }

@SUN6I_DSI_INST_FUNC_LANE_CEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sun6i_dsi*, i32, i32, i32, i32, i32, i32)* @sun6i_dsi_inst_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sun6i_dsi_inst_setup(%struct.sun6i_dsi* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.sun6i_dsi*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.sun6i_dsi* %0, %struct.sun6i_dsi** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %15 = load %struct.sun6i_dsi*, %struct.sun6i_dsi** %8, align 8
  %16 = getelementptr inbounds %struct.sun6i_dsi, %struct.sun6i_dsi* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @SUN6I_DSI_INST_FUNC_REG(i32 %18)
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @SUN6I_DSI_INST_FUNC_INST_MODE(i32 %20)
  %22 = load i32, i32* %14, align 4
  %23 = call i32 @SUN6I_DSI_INST_FUNC_ESCAPE_ENTRY(i32 %22)
  %24 = or i32 %21, %23
  %25 = load i32, i32* %13, align 4
  %26 = call i32 @SUN6I_DSI_INST_FUNC_TRANS_PACKET(i32 %25)
  %27 = or i32 %24, %26
  %28 = load i32, i32* %11, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %7
  %31 = load i32, i32* @SUN6I_DSI_INST_FUNC_LANE_CEN, align 4
  br label %33

32:                                               ; preds = %7
  br label %33

33:                                               ; preds = %32, %30
  %34 = phi i32 [ %31, %30 ], [ 0, %32 ]
  %35 = or i32 %27, %34
  %36 = load i32, i32* %12, align 4
  %37 = call i32 @SUN6I_DSI_INST_FUNC_LANE_DEN(i32 %36)
  %38 = or i32 %35, %37
  %39 = call i32 @regmap_write(i32 %17, i32 %19, i32 %38)
  ret void
}

declare dso_local i32 @regmap_write(i32, i32, i32) #1

declare dso_local i32 @SUN6I_DSI_INST_FUNC_REG(i32) #1

declare dso_local i32 @SUN6I_DSI_INST_FUNC_INST_MODE(i32) #1

declare dso_local i32 @SUN6I_DSI_INST_FUNC_ESCAPE_ENTRY(i32) #1

declare dso_local i32 @SUN6I_DSI_INST_FUNC_TRANS_PACKET(i32) #1

declare dso_local i32 @SUN6I_DSI_INST_FUNC_LANE_DEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
